chickadee.css
/* Disabled box-shadow on #contents and dl.defsig due to
   performance problems on mobile (and tackiness). */
body {
  font-family: "Georgia", "Times New Roman", serif;
  background-color: #ffffff;
  margin: 0;
  padding: 0;
  font-size: 16px;
}

pre {
  font-family: "Courier", "Courier New", monospace;
  font-size: 14px;
  padding: 0.2em 0 0.2em 1em;
  margin: 1em 0 1em 0.3em;
  border-left: 3px double black;
/*  background-color: #f4f4f4; */
}
tt {
  font-family: "Courier", "Courier New", monospace;
  font-size: 0.875em;
}

#body {
}
#main {
  padding-left: 1em;
  padding-right: 1em;
  margin-top: 0.5em;
}
#main ul {
  list-style-type: circle;
}

#contents {
  float: right; width: 20%;
  margin: 0.5em 10px 1em 1em;
  overflow: hidden;
  border: 1px solid #000;
  -moz-border-radius-bottomleft: 6px;
  -webkit-border-bottom-left-radius: 6px;
  border-bottom-left-radius: 6px;
/*  -moz-box-shadow: -5px 3px 5px #ddd; */   /* mozilla hack to prevent right overflow */
/*  -moz-box-shadow: 0px 1px 10px #aaa; 
  -webkit-box-shadow: 0px 1px 10px #aaa;
  box-shadow: 0px 1px 10px #aaa; */
  background-color: white;
}
#contents h2 {
  text-transform: lowercase;
  background-color: #444;
  color: #fff;
  font-size: 14px;
  font-style: italic;
  font-weight: normal;
  margin: 0;
  border: none;
  line-height: 1em;
  padding: 0.25em 0.25em 0.25em 0.5em;
  cursor: pointer;
  letter-spacing: 0.1em;
}
#toc {
  overflow: hidden;
  zoom: 1;
  border: 1px solid #000;
  border-left: 2px solid #000;
  -moz-border-radius-bottomright: 5px;
  -webkit-border-bottom-right-right: 5px;
  border-bottom-right-radius: 5px;
  background-color: #fdfdfe;
}
#toc h2 {
  text-transform: lowercase;
  background-color: #444;
  color: #fff;
  font-size: 14px;
  font-style: italic;
  font-weight: normal;
  margin: 0;
  border: none;
  line-height: 1em;
  padding: 0.25em 0.25em 0.25em 0.5em;
  cursor: pointer;
  letter-spacing: 0.1em;
/*  border-bottom: 1px solid #000; */
}
#toc ul {
  list-style-type: none;
  font-size: 14px;
  line-height: 1.3em;
  margin: 0; padding: 0;
  padding-left: 1.5em;
  text-transform: lowercase;
}
.js #toc ul.toc {    /* want #toc > ul but not compat w/IE6 */
  display: none;
}
#toc ul.toc {
  padding-left: 0.5em;
}
#toc ul li {
  margin: 0;
}
#toc ul li a {
  border: none; font-weight: normal; font-style: italic;
  color: #000;
}

dt {
  font-weight: bold;
}

dl.defsig {
  border: 1px solid black;
  border-left: 3px solid black;
/*  border-right: 3px double black; */
  border-color: black;
  margin-left: 1em;
/*  margin-right: 1em; */
  -moz-border-radius-bottomright: 5px;
  -webkit-border-bottom-right-radius: 5px;
  border-bottom-right-radius: 5px;
/*  -webkit-box-shadow: #bbb 0px 1px 1px;
  -moz-box-shadow: #bbb 0px 2px 5px;
  box-shadow: #bbb 0px 2px 5px; */
}

dt.defsig {
  padding: 0.2em 1.0em;
  background-color: #444;
  color: #fff;
  border-bottom: 1px solid black;
  font-weight: normal;
  margin: 0;
  font-size: 1em;
}

dt.defsig {
  /* Both child elements are floating, so we introduce a new
     block context so they are encapsulated. */
  overflow: hidden;
  zoom: 1;
  min-height: 0;
}
#main dt.defsig a, #main dt.defsig a:hover {
  /* avoid inherit & use #main to placate IE6/7 */
  /* font-style: inherit !important; */
  /* color: inherit !important; */
  font-style: normal;  
  color: #fff;
}
dt.defsig a:hover tt {
  border-bottom: 1px solid #fff !important;
}

dt.defsig span.type {
  float: right;
  color: #eee;
  font-size: 0.9375em;
  font-style: italic;
  font-weight: normal;
/*  border-left: 3px double black; */
}
dt.defsig span.sig {
/* monospace already set via tt */
  float: left;
}

/* dt.defsig span.sig tt {
    font-family: "Georgia", "Times New Roman", serif;
    font-size: 16px;
    letter-spacing: 0.05em;
} */

.operator {
  color: #800000;
}

/* I want to change the margin-top to padding-top but
   paragraph margins will use the padding as a baseline;
   if margin & padding is 0, then tables are not offset */
dd.defsig {
  padding-left: 1em;
  padding-right: 1em;
  margin: 0;
  margin-top: 1em;
  margin-bottom: 1em;
  background-color: #ffffff;
}

h2 {
/*  border-top: 1px solid black; */
  border-bottom: 3px double black;
}

h3 {
  border-bottom: 1px solid #808080;
}

/* section links */
#main h1 a, #main h2 a, #main h3 a, #main h4 a, #main h5 a, #main h6 a {
    font-style: normal;     /* avoid inherit to placate IE6/7 */
    color: #000;
}
#main h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
    background-color: #000;
    color: #fff;
}
/* end section links */

hr {
  border: 1px solid black;
}

table {
  border: 1px solid black;
  border-collapse: collapse;
/*  margin-left: auto;
  margin-right: auto;
*/
  margin-left: 2em;
  margin-right: 2em;
  margin-top: 0;
  margin-bottom: 0;
}
th {
  text-align: left;
  padding-left: 1em;
  padding-right: 1em;
  font-weight: bold;
  border: 1px solid black;
}
td {
  border: 1px solid black;
  padding-left: 1em;
  padding-right: 1em;
}
dl {
  margin-left: 1em;
}
dt {
  margin-top: 0.2em;
}

a {
  text-decoration: none;
  color: #000;
}

a:hover {
  color: #fff;
  background-color: #000;
}

#main a {
  color: #224;
  border-bottom: 1px solid #889;
  font-style: italic;
}
#main a:hover {
  color: #fff;
  background-color: #002;
}

#hdr h1 {
  font-size: medium;
  padding-left: 0.3em;
  background-color: #ffffff;
  margin-bottom: 0;
  margin-top: 0;
  float: left;
}
#hdr h5 {
  display: none;
}
#hdr {
  /* BFC set elsewhere */
  border-bottom: 3px double black;
  /* box-shadow: #bbb 0px 1px 5px;  // desired box shadow, but right overflow issues */
  -webkit-box-shadow: #bbb -3px 1px 3px;  /* moz hack to prevent right overflow */
  -moz-box-shadow: #bbb -3px 1px 3px;  /* moz hack to prevent right overflow */
  box-shadow: #bbb -3px 1px 3px;
}

h1 a {
  border: none;
  font-weight: bold;
  font-style: italic;
  padding-left: 0.2em;
  padding-right: 0.2em;
}

#main td.match-path {
  /* text-align: right; */
}
/* ... */

